--- a/terminal/del_late/test.ipynb
+++ b/terminal/del_late/test.ipynb
@@ -2,42 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "primas while =  1\n",
+      "antras while -  1\n",
+      "antras while -  2\n",
+      "antras while -  3\n",
+      "antras while -  4\n",
+      "primas while =  2\n",
+      "antras while -  1\n",
+      "antras while -  2\n",
+      "antras while -  3\n",
+      "antras while -  4\n",
+      "primas while =  3\n",
+      "antras while -  1\n",
+      "antras while -  2\n",
+      "antras while -  3\n",
+      "antras while -  4\n",
+      "primas while =  4\n",
+      "antras while -  1\n",
+      "antras while -  2\n",
+      "antras while -  3\n",
+      "antras while -  4\n",
+      "primas while =  5\n",
+      "antras while -  1\n",
+      "antras while -  2\n",
+      "antras while -  3\n",
+      "antras while -  4\n",
+      "primas while =  6\n",
+      "antras while -  1\n",
+      "antras while -  2\n",
+      "antras while -  3\n",
+      "antras while -  4\n",
+      "primas while =  7\n",
+      "antras while -  1\n",
+      "antras while -  2\n",
+      "antras while -  3\n",
+      "antras while -  4\n",
+      "primas while =  8\n",
+      "antras while -  1\n",
+      "antras while -  2\n",
+      "antras while -  3\n",
+      "antras while -  4\n",
+      "primas while =  9\n",
+      "antras while -  1\n",
+      "antras while -  2\n",
+      "antras while -  3\n",
+      "antras while -  4\n",
+      "primas while =  10\n",
+      "antras while -  1\n",
+      "antras while -  2\n",
+      "antras while -  3\n",
+      "antras while -  4\n"
+     ]
+    }
+   ],
    "source": [
-    "def input_only_en_letters(input_text: str) -> str:\n",
-    "    \"\"\"Validate input is a input_text\n",
-    "    input_text: what text want to see in input line\"\"\"\n",
-    "\n",
-    "    lt_letters_list = [\"Ą\", \"Č\", \"Ę\", \"Ė\", \"Į\", \"Š\", \"Ų\", \"Ū\", \"Ž\"]\n",
-    "    while True:\n",
-    "        string = input(input_text).upper()\n",
-    "        if len(string) == 1:\n",
-    "            if (\n",
-    "                string not in lt_letters_list\n",
-    "                and string.replace(\" \", \"\").isalpha() is True\n",
-    "            ):\n",
-    "                return string\n",
-    "            print(\"Input must to be a string or only English alphabet letter !\")\n",
-    "        else:\n",
-    "            for _ in range(len(string)):\n",
-    "                for letter in string:\n",
-    "                    if letter in lt_letters_list:\n",
-    "                        print(\n",
-    "                            f'Letter {colored(letter, \"red\")} in word must to be from English alphabetic letter'\n",
-    "                        )\n",
-    "                    continue\n",
-    "                return string\n",
-    "        # Word.not_guessed_letters_list.append(string) # FIXME #? ar reikia tos eilutės\n",
-    "\n",
-    "print(input_only_en_letters('Iveskite tik EN reides :'))\n"
+    "text = []\n",
+    "word = set('Hello')\n",
+    "print(len(word))\n",
+    "l = 0\n",
+    "while l < 10:\n",
+    "    l += 1\n",
+    "    print('primas while = ', l)\n",
+    "    r = 0\n",
+    "    while r < len(word):\n",
+    "        r += 1\n",
+    "        text.append(r)\n",
+    "        print('antras while - ', r)\n",
+    "        continue\n",
+    "        "
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "CA_last_work-KDRGiy7x",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
