almost finish with one letter input

--- a/terminal/del_late/test.ipynb
+++ b/terminal/del_late/test.ipynb
@@ -2,67 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "primas while =  1\n",
-      "antras while -  1\n",
-      "antras while -  2\n",
-      "antras while -  3\n",
-      "antras while -  4\n",
-      "primas while =  2\n",
-      "antras while -  1\n",
-      "antras while -  2\n",
-      "antras while -  3\n",
-      "antras while -  4\n",
-      "primas while =  3\n",
-      "antras while -  1\n",
-      "antras while -  2\n",
-      "antras while -  3\n",
-      "antras while -  4\n",
-      "primas while =  4\n",
-      "antras while -  1\n",
-      "antras while -  2\n",
-      "antras while -  3\n",
-      "antras while -  4\n",
-      "primas while =  5\n",
-      "antras while -  1\n",
-      "antras while -  2\n",
-      "antras while -  3\n",
-      "antras while -  4\n",
-      "primas while =  6\n",
-      "antras while -  1\n",
-      "antras while -  2\n",
-      "antras while -  3\n",
-      "antras while -  4\n",
-      "primas while =  7\n",
-      "antras while -  1\n",
-      "antras while -  2\n",
-      "antras while -  3\n",
-      "antras while -  4\n",
-      "primas while =  8\n",
-      "antras while -  1\n",
-      "antras while -  2\n",
-      "antras while -  3\n",
-      "antras while -  4\n",
-      "primas while =  9\n",
-      "antras while -  1\n",
-      "antras while -  2\n",
-      "antras while -  3\n",
-      "antras while -  4\n",
-      "primas while =  10\n",
-      "antras while -  1\n",
-      "antras while -  2\n",
-      "antras while -  3\n",
-      "antras while -  4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text = []\n",
     "word = set('Hello')\n",
@@ -78,6 +20,37 @@
     "        print('antras while - ', r)\n",
     "        continue\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self, a):\n",
+    "        self.a = a\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return f'{self.a}'\n",
+    "\n",
+    "class B(A):\n",
+    "    \n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return f'{self.a}, {self.b}'\n",
+    "    \n",
+    "b = B(1)\n",
+    "print(b.a)\n"
    ]
   }
  ],
